--- a/src/utils/Gallery.css
+++ b/src/utils/Gallery.css
@@ -1,6 +1,6 @@
 .gallery-controls{
     width: 70vw;
-    height: 12vh;
+    height: 12dvh;
     margin: 2em auto 1em auto;
 
     display: flex;
@@ -37,21 +37,21 @@
 .image-gallery{
     min-width: 70vw;
     max-width: 70vw;
-    min-height: calc(100vh - 10vh - 12vh - 3em);
-    max-height: calc(100vh - 10vh - 12vh - 3em);
+    min-height: calc(100dvh - 10dvh - 12dvh - 3em);
+    max-height: calc(100dvh - 10dvh - 12dvh - 3em);
     margin: 0 auto 4em auto;
 }
 .image-gallery-content img, .image-gallery-slide img, .image-gallery-image img{
     min-width: 70vw;
     max-width: 70vw;
-    min-height: calc(100vh - 10vh - 12vh - 3em);
-    max-height: calc(100vh - 10vh - 12vh - 3em);
+    min-height: calc(100dvh - 10dvh - 12dvh - 3em);
+    max-height: calc(100dvh - 10dvh - 12dvh - 3em);
     object-fit: cover;
 }
 
 .fullscreen img {
     min-width: 100vw !important;
-    min-height: 100vh !important;
+    min-height: 100dvh !important;
     object-fit: contain;
 }
   
@@ -92,15 +92,15 @@
     .image-gallery{
         min-width: 100vw !important;
         max-width: 100vw !important;
-        min-height: calc(100vh - 10vh - 12vh - 9em) !important;
-        max-height: calc(100vh - 10vh - 12vh - 9em) !important;
+        min-height: calc(100dvh - 10dvh - 12dvh - 9em) !important;
+        max-height: calc(100dvh - 10dvh - 12dvh - 9em) !important;
         margin: 0 auto 4em auto !important;
     }
     .image-gallery-content img, .image-gallery-slide img, .image-gallery-image img{
         min-width: 100vw !important;
         max-width: 100vw !important;
-        min-height: calc(100vh - 10vh - 12vh - 9em) !important;
-        max-height: calc(100vh - 10vh - 12vh - 9em) !important;
+        min-height: calc(100dvh - 10dvh - 12dvh - 9em) !important;
+        max-height: calc(100dvh - 10dvh - 12dvh - 9em) !important;
         object-fit: cover !important;
     }
 }
