--- a/src/utils/Navbar.css
+++ b/src/utils/Navbar.css
@@ -1,6 +1,6 @@
 .navbar-container{
     width: 100vw;
-    height: 10vh;
+    height: 10dvh;
     display: flex;
     flex-direction: row;
     
@@ -36,7 +36,7 @@
 
 .nav-links{
     width: 70vw;
-    height: 10vh;
+    height: 10dvh;
 
     display: flex;
     flex-direction: row;
@@ -72,7 +72,7 @@
 
     .logo-burger-container{
         width: 100vw;
-        height: 10vh;
+        height: 10dvh;
         display: flex;
         flex-direction: row;
 
@@ -100,7 +100,7 @@
         justify-content: center;
 
         width: 100vw;
-        min-height: calc(70vh - 4.5em);
+        min-height: calc(70dvh - 4.5em);
         border-radius: 0 0 2em 2em;
         background-color: white;
 
